src/scss/abstracts/_mixins.scss
/* src/scss/abstracts/_mixins.scss */
@use "variables" as v;
@use "functions" as f;

@mixin respond-to($breakpoint) {
  @if $breakpoint == "sm" {
    @media (min-width: v.$breakpoint-sm) {
      @content;
    }
  } @else if $breakpoint == "md" {
    @media (min-width: v.$breakpoint-md) {
      @content;
    }
  } @else if $breakpoint == "lg" {
    @media (min-width: v.$breakpoint-lg) {
      @content;
    }
  } @else if $breakpoint == "xlg" {
    @media (min-width: v.$breakpoint-xlg) {
      @content;
    }
  } @else if $breakpoint == "xl" {
    @media (min-width: v.$breakpoint-xl) {
      @content;
    }
  } @else if $breakpoint == "xxl" {
    @media (min-width: v.$breakpoint-xxl) {
      @content;
    }
  }
}

@mixin flex-center {
  display: flex;
  align-items: center;
  flex-direction: row;
}

@mixin flex-center-reverse {
  display: flex;
  align-items: center;
  flex-direction: row-reverse;
}

@mixin transition-animation {
  transition: all 0.2s ease-out;
}

@mixin red-rect {
  display: block;
  content: "";
  width: f.rem(8);
  height: f.rem(16);
  background-color: v.$color-brand-secondary;
  position: absolute;
  right: 0;
  top: 50%;
  transform: translateY(-50%);
  border-radius: f.rem(2);
}

@mixin main-title {
  font-size: f.rem(14);
  color: v.$color-brand-dark-blue;
  font-weight: bold;
  position: relative;
  padding-right: 16px;
  margin-bottom: f.rem(16);

  @include respond-to("lg") {
    font-size: f.rem(18);
    margin-bottom: f.rem(32);
  }

  &::before {
    @include red-rect;
    height: 24px;
  }
}

@mixin square-thumb-vert {
  margin-top: f.rem(16);
  padding-bottom: f.rem(24);
  li {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding-top: f.rem(16);
    gap: f.rem(16);

    .meta {
      &__title {
        font-size: f.rem(14);
        color: v.$color-text-dark-subheader;
        font-weight: bold;
        margin-bottom: f.rem(16);
        line-height: 200%;
      }
      &__author-time {
        font-size: f.rem(12);
        color: v.$color-text-header;
        display: flex;
        gap: f.rem(6);
      }
    }

    .thumbnail {
      width: f.rem(80);
      height: f.rem(80);
      overflow: hidden;
      border-radius: 8px;

      a {
        img {
          width: 100%;
          height: 100%;
          aspect-ratio: 1/1;
          object-fit: cover;
        }
      }
    }
  }
  li:not(:last-child) {
    padding-bottom: f.rem(16);
    border-bottom: 1px solid v.$color-border;
  }
}

@mixin single-thumb {
  &__featured {
    border-radius: 16px;
    overflow: hidden;
    aspect-ratio: 1/1;
    position: relative;

    img {
      width: 100%;
      height: 100%;
      object-fit: cover;
    }
  }
  &__overlay {
    width: 100%;
    height: 100%;
    position: absolute;
    bottom: 0;
    right: 0;
    padding: f.rem(24) f.rem(16);
    display: flex;
    flex-direction: column;
    justify-content: end;
    gap: 16px;

    &::after {
      content: "";
      bottom: 0;
      right: 0;
      width: 100%;
      height: 100%;
      background: linear-gradient(
        to bottom,
        rgba(0, 0, 0, 0) 0%,
        rgba(0, 0, 0, 0.7) 100%
      );
      position: absolute;
      pointer-events: none;
      border-radius: 16px;
    }

    .title {
      z-index: 2;
      a {
        font-size: f.rem(20);
        line-height: 200%;
        font-weight: bold;
        color: white;
      }
    }

    .author-date {
      z-index: 2;
      display: flex;
      gap: 8px;
      align-items: center;
      font-size: f.rem(12);
      font-weight: 500;
      color: white;
      line-height: 150%;
    }
  }
}

@mixin btn-more {
  border: 2px solid v.$color-brand-secondary;
  padding: f.rem(10) f.rem(16);
  border-radius: 16px;
  color: v.$color-brand-secondary;
  font-family: "IranSansX";
  background-color: white;
  font-size: f.rem(14);
  font-weight: 600;
  line-height: 150%;
  margin: f.rem(24) auto;
  display: flex;
  gap: 8px;
  align-items: center;
  justify-content: center;

  &:hover {
    background-color: v.$color-brand-secondary;
    color: white;
    @include transition-animation;
  }
}

@mixin vertical-contents--lg {
  display: flex;
  flex-direction: column;
  justify-content: space-between;

  &__item {
    width: 100%;
    display: flex;
    gap: f.rem(16);
    align-items: center;

    &:not(:first-child) {
      margin-top: f.rem(8);
    }

    .thumbnail {
      width: f.rem(100);
      min-width: f.rem(100);
      height: f.rem(100);
      flex-shrink: 0;
      border-radius: 8px;
      overflow: hidden;

      a {
        display: block;
        width: 100%;
        height: 100%;
      }

      img {
        display: block;
        width: 100%;
        height: 100%;
        object-fit: cover;
        transform: scale(100%);
        @include transition-animation;
      }
    }
    &:hover .thumbnail img {
      transform: scale(105%);
      @include transition-animation;
    }
    .meta {
      height: 100%;
      display: flex;
      flex-direction: column;
      gap: f.rem(16);
      justify-content: space-between;
      padding: f.rem(8) 0;

      &__title {
        font-size: f.rem(16);
        line-height: 200%;
        color: v.$color-text-blue-title;
        font-weight: 600;
      }
      &__author {
        font-size: f.rem(12);
        font-weight: 500;
        color: v.$color-text-header;
        display: flex;
        gap: 8px;
        align-items: center;
      }
    }
  }
}

